--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
-<div class="card">
-    <h2>Sign Up</h2>
-    <form method="POST">
-      <div class="input-group">
-        <label for="email">Email</label>
-        <input
-          type="text"
-          name="email"
-          id="email"
-          placeholder="janedoe@mail.com"
-        />
+<html>
+  <head>
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <div class="card">
+        <h2>Sign Up</h2>
+        <form method="POST">
+          <div class="input-group">
+            <label for="email">Email</label>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="email@mail.com"
+            />
+          </div>
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="password123"
+            />
+          </div>
+          <div id="msg"></div>
+          <button id="sign-up">Sign Up</button>
+        </form>
       </div>
-      <div class="input-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          name="password"
-          id="password"
-          placeholder="supersecure123"
-        />
-      </div>
-      <div id="msg"></div>
-      <button id="sign-up">Sign Up</button>
-    </form>
-  </div>
+  </body>
+</html>
