--- a/index.html
+++ b/index.html
@@ -7,24 +7,11 @@
         <h2>Sign Up</h2>
         <form method="POST">
           <div class="input-group">
-            <label for="email">Email</label>
-            <input
-              type="text"
-              name="email"
-              id="email"
-              placeholder="email@mail.com"
-            />
+            Email: <input type="text" id="email" placeholder="email@mail.com"/>
           </div>
           <div class="input-group">
-            <label for="password">Password</label>
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="password123"
-            />
+            Password: <input type="password" id="password" placeholder="password123"/>
           </div>
-          <div id="msg"></div>
           <button id="sign-up">Sign Up</button>
         </form>
       </div>
