readded message div to index.html and function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <div class="input-group">
             Password: <input type="password" id="password" placeholder="password123"/>
           </div>
+          <div id="msg"></div>
           <button id="sign-up">Sign Up</button>
         </form>
       </div>
