--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
           <button id="sign-up">Sign Up</button>
         </form>
       </div>
+
+      <div class="card">
+        <h2>Last Registered User:</h2>
+        <p><strong>Email:</strong> <span id="user-email"></span></p>
+        <p><strong>Password:</strong> <span id="user-password"></span></p>
+      </div>
   </body>
 </html>
